--- a/templates/template-dhcpcd.conf
+++ b/templates/template-dhcpcd.conf
@@ -38,6 +38,5 @@ slaac private
 # Static IP configuration:
 interface eth0
 static ip_address=<_THE_IP_ADDR>/<_THE_NET_MASK>
+static routers=<_THE_ROUTER>
 static domain_name_servers=<_THE_DNS_SRV>
-#static routers=<_THE_ROUTER>
-
